# My-Projects

./: .gitignore  CNAME  README.md
Auto_Indexer/: CMakeLists.txt  DSString.cpp  DSString.h  DSStringTest.cpp  DSVector.h  DSVectorTest.cpp  IndexEntry.cpp  IndexEntry.h  Processor.cpp  Processor.h  README.md  main.cpp
Auto_Indexer/data/: edge_case.txt
Flight_Planner/: CMakeLists.txt  DSListTest.cpp  DSStack.h  DestCity.cpp  DestCity.h  OrigCity.cpp  OrigCity.h  Processor.cpp  Processor.h  README.md  main.cpp  path.cpp  path.h
Flight_Planner/data/: sample01-req-flights.txt
Logic_Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  README.md  main.cpp
Search Engine/: CMakeLists.txt  DSAvlTree.h  DSAvl_Map.h  DSHashTest.cpp  DSList.h  DSString.cpp  Documento.cpp  Morpheme.cpp  Parser.cpp  Parser.h  Query.cpp  Query.h  README.md  main.cpp
Search Engine/cityhash-master/: Makefile  config.status  libtool
Search Engine/cityhash-master/src/: Makefile
Search Engine/cityhash-master/src/.deps/: city-test.Po  city.Plo
Search Engine/cityhash-master/src/.libs/: cityhash_unittest
Search Engine/cityhash-master/src/.libs/libcityhash.0.dylib.dSYM/Contents/Resources/DWARF/: libcityhash.0.dylib
Search_Engine/: DSAvlNode.h  DSAvlTest.cpp  DSHashTable.h  DSNode.h  DSString.h  Documento.h  Morpheme.h  wordInfo.h
Tweet_Sentiment_Analyzer/: .gitignore  CMakeLists.txt  DSString.cpp  DSString.h  Processor.cpp  Processor.h  README.md  main.cpp  test.cpp
Tweet_Sentiment_Analyzer/wstring remnents /: DWString.cpp  DWString.h  wProcessor.cpp  wProcessor.h
(+2 files in other folders)
